# txt2ebook

./: .gitignore  Cargo.toml  README.md
src/: chapter.rs  config.rs  lib.rs  main.rs  template_type.rs  zip_utils.rs
templates/: catalog.html  catalog.xhtml  config.toml.tmpl  container.xml  content.html  content.opf  content.xhtml  cover.xhtml  stylesheet.css  title.xhtml  toc.ncx
