[package]
authors = ["zhengxin <zhngxin@aliyun.com>"]
edition = "2018"
name = "txt4k"
version = "0.2.0"
[dependencies]
clap = "*"
encoding = "*"
encodingbufreader = "*"
handlebars = "*"
htmlescape = "*"
regex = "*"
rust-embed = "6.2.0"
serde_json = "*"
toml = "*"
zip = "0.5.12"
walkdir = "2.3.2"

[dependencies.serde]
features = ["derive"]
version = "1.0"
