[package]
authors = ["zhengxin <zhngxin@aliyun.com>"]
edition = "2018"
name = "txt4k"
version = "0.2.0"
[dependencies]
clap = "2.33.3"
encoding = "0.2.33"
encodingbufreader = "0.1.1"
handlebars = "4.1.3"
htmlescape = "0.3.1"
regex = "1.5.4"
rust-embed = "6.2.0"
serde_json = "1.0.68"
toml = "0.5.8"
zip = "0.5.13"
walkdir = "2.3.2"

[dependencies.serde]
features = ["derive"]
version = "1.0.130"
