[package]
authors = ["zhengxin <zhngxin@aliyun.com>"]
edition = "2018"
name = "txt2ebook"
version = "0.2.0"
[dependencies]
clap = "3.2.17"
encoding = "0.2.33"
encodingbufreader = "0.1.1"
handlebars = "4.3.3"
htmlescape = "0.3.1"
regex = "1.6.0"
rust-embed = "6.4.0"
serde_json = "1.0.83"
toml = "0.5.9"
zip = "0.6.2"
walkdir = "2.3.2"
html-escape = "0.2.11"

[dependencies.serde]
features = ["derive"]
version = "1.0.143"
